--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,42 @@
 version: "2"
 services:
-  jenkins:
-    image: jenkins/jenkins:lts
+  hub:
+    image: selenium/hub:3.14
     ports:
-       - "8080:8080" 
-       - "50000:50000" 
+      - "4444:4444"
+  chrome:
+    image:  selenium/node-chrome:3.14
+    depends_on:
+      - hub
+    environment:
+      - HUB_HOST=hub
+  firefox:
+    image: selenium/node-firefox:3.14
+    shm_size: '1gb'
+    depends_on:
+      - hub
+    environment:
+      - HUB_HOST=hub
+  search-module:
+    image: chintalokesh/seleniumdocker
+    depends_on:
+      - chrome
+      - firefox
+    environment:
+      - BROWSER=chrome
+      - HUB_HOST=192.168.0.102
+      - MODULE=testng.xml
     volumes:
-      - C:/Users/lokeshc2/Desktop/Extras/jenkins:/var/jenkins_home
+      - ./output:/usr/lokesh/Reports
+      - ./output:/usr/lokesh/Screenshots
+  find-module:
+    image: chintalokesh/seleniumdocker
+    depends_on:
+      - chrome 
+    environment:
+      - BROWSER=chrome  
+      - HUB_HOST=192.168.0.102
+      - MODULE=testng1.xml
+    volumes:
+      - ./output1:/usr/lokesh/Reports
+      - ./output1:/usr/lokesh/Screenshots  
