Removed the port mapping

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,6 @@ version: "2"
 services:
   hub:
     image: selenium/hub:3.14
-    ports:
-      - "4444:4444"
   chrome:
     image:  selenium/node-chrome:3.14
     depends_on:
@@ -27,8 +25,8 @@ services:
       - HUB_HOST=192.168.1.4
       - MODULE=testng.xml
     volumes:
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER:/usr/lokesh/Reports
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER:/usr/lokesh/Screenshots
+      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output:/usr/lokesh/Reports
+      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output:/usr/lokesh/Screenshots
   find-module:
     image: chintalokesh/seleniumdocker
     depends_on:
@@ -38,5 +36,5 @@ services:
       - HUB_HOST=192.168.1.4
       - MODULE=testng1.xml
     volumes:
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER:/usr/lokesh/Reports
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER:/usr/lokesh/Screenshots  
+      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output1:/usr/lokesh/Reports
+      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output1:/usr/lokesh/Screenshots  
