--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,19 +24,19 @@ services:
       - firefox
     environment:
       - BROWSER=chrome
-      - HUB_HOST=192.168.1.4
+      - HUB_HOST=192.168.1.6
       - MODULE=testng.xml
     volumes:
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output:/usr/lokesh/Reports
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output:/usr/lokesh/Screenshots
+      - C:\Users\503197713\JenkinsSlave\workspace\SELENIUM_DOCKER_RUNNER\output:/usr/lokesh/Reports
+      - C:\Users\503197713\JenkinsSlave\workspace\SELENIUM_DOCKER_RUNNER\output:/usr/lokesh/Screenshots
   find-module:
     image: chintalokesh/seleniumdocker
     depends_on:
       - chrome 
     environment:
       - BROWSER=chrome  
-      - HUB_HOST=192.168.1.4
+      - HUB_HOST=192.168.1.6
       - MODULE=testng1.xml
     volumes:
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output1:/usr/lokesh/Reports
-      - C:\Users\lokeshc2\Jenkins\workspace\SELENIUM_DOCKER_RUNNER\output1:/usr/lokesh/Screenshots  
+      - C:\Users\503197713\JenkinsSlave\workspace\SELENIUM_DOCKER_RUNNER\output1:/usr/lokesh/Reports
+      - C:\Users\503197713\JenkinsSlave\workspace\SELENIUM_DOCKER_RUNNER\output1:/usr/lokesh/Screenshots  
